--- a/src/components/Calendar/Calendar.scss
+++ b/src/components/Calendar/Calendar.scss
@@ -30,6 +30,9 @@
     .calendar-content-date {
       display: flex;
       justify-content: space-between;
+
+      padding: 0 4px;
+
       span {
         font-family: "SUIT";
         font-weight: 500;
@@ -44,7 +47,9 @@
     .calendar-content-day {
       width: 0.78125vw;
       height: 0.78125vw;
-      padding: 0.78125vw;
+
+      // padding: 0.78125vw;
+      padding: 12px 0.78125vw;
       border-radius: 20px;
       display: flex;
       justify-content: center;
@@ -66,6 +71,23 @@
       content: "";
       background: #00cb8e;
       color: #00cb8e;
+    }
+  }
+}
+
+@media screen and (max-width: 960px) {
+  .calendar {
+    border: 0;
+
+    .calendar-content {
+      .calendar-content-date {
+        padding: 0 5vw; //18
+      }
+      .calendar-content-day {
+        width: 13.6vw; //49
+        height: 13.6vw;
+        border-radius: 50%;
+      }
     }
   }
 }
