--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -23,5 +23,31 @@
     font-size: 0.8125rem;
     color: #616269;
     padding-top: 41px;
+    line-height: 18px;
+  }
+}
+
+@media screen and (max-width: 960px) {
+  .footer {
+    height: 197px;
+    padding: 0;
+
+    box-sizing: border-box;
+    padding-left: 4.44vw;
+
+    display: flex;
+    flex-direction: column;
+    text-align: left;
+
+    .footer-title {
+      padding-top: 40px;
+    }
+    .footer-content {
+      font-size: 0.75rem;
+      padding: 0;
+      img {
+        margin-top: 10px;
+      }
+    }
   }
 }
