--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -8,6 +8,7 @@
   box-sizing: border-box;
   padding: 0 19.115vw;
   z-index: 10;
+
   .title {
     box-sizing: border-box;
     font-family: "Inter";
@@ -15,12 +16,21 @@
     font-size: 1.25rem;
     color: #4f4f4f;
     white-space: nowrap;
+
+    display: flex;
+    align-items: center;
+
+    img {
+      width: 28px;
+      height: 28px;
+
+      margin-right: 8px;
+    }
   }
 
   .header-content {
     display: flex;
     align-items: center;
-
     nav {
       ul {
         display: flex;
@@ -53,6 +63,7 @@
     .login-container {
       display: flex;
       justify-content: center;
+
       button {
         white-space: nowrap;
         cursor: pointer;
@@ -95,6 +106,10 @@
 
         border: 1px solid #eef1f4;
         border-radius: 50%;
+        img {
+          width: 100%;
+          height: 100%;
+        }
       }
     }
   }
@@ -107,6 +122,7 @@
 
     display: flex;
     flex-direction: column;
+
     .header-mobile-top {
       width: 100%;
       display: flex;
