--- a/src/components/Input/Input.scss
+++ b/src/components/Input/Input.scss
@@ -1,6 +1,6 @@
 .inputBox {
   width: 100%;
-  height: 48px;
+  // height: 48px;
 
   font-family: "SUIT";
   font-weight: 500;
@@ -10,7 +10,7 @@
   border: 1px solid #e4e9ed;
   box-sizing: border-box;
   border-radius: 10px;
-  padding-left: 16px;
+  padding: 14px 16px;
 
   -webkit-appearance: none;
 }
@@ -26,4 +26,20 @@
 .inputBox::-webkit-outer-spin-button,
 .inputBox::-webkit-inner-spin-button {
   -webkit-appearance: none;
+}
+
+input::placeholder {
+  color: #b1b5be;
+}
+
+@media screen and (max-width: 960px) {
+  .writeArticle-mobile {
+    border: 0;
+    border-radius: 0;
+
+    padding: 20px 0;
+    border-bottom: 1px solid #e4e9ed;
+
+    font-size: 0.9375rem;
+  }
 }
