--- a/src/components/MypageCard/MypageCard.scss
+++ b/src/components/MypageCard/MypageCard.scss
@@ -1,12 +1,12 @@
 .mypageCard {
   box-sizing: border-box;
   // width: 14.6875vw;
-  width: 282px;
-  // height: 14.6875vw;
+  // width: 282px;
   height: 282px;
   overflow: hidden;
-
   position: relative;
+
+  border-radius: 10px;
   img {
     width: 100%;
     height: 100%;
@@ -14,14 +14,40 @@
     border-radius: 10px;
   }
 }
+
+.mypageCard-noneImg {
+  text-align: left;
+  font-family: "SUIT";
+
+  padding: 16px;
+  color: #ffffff;
+
+  .mypageCard-description-title {
+    word-break: break-word;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+
+    font-weight: 600;
+    font-size: 1.125rem;
+
+    margin-bottom: 20px;
+  }
+
+  .mypageCard-description-date {
+    font-weight: 500;
+    font-size: 14px;
+  }
+}
+
 .mypageCard-description {
   box-sizing: border-box;
   position: absolute;
-  // width: 14.6875vw;
-  width: 282px;
+  // width: 282px;
+  width: 100%;
   height: 122px;
 
-  // height: 6.3542vw;
   padding: 24px 1.042vw;
 
   background: #00cb8e;
@@ -40,6 +66,7 @@
 
     font-family: "SUIT";
     font-weight: 600;
+    font-size: 1.125rem;
 
     color: #ffffff;
 
@@ -58,5 +85,111 @@
   .mypageCard-description {
     opacity: 0.8;
     transform: translateY(-102%);
+  }
+}
+
+@media screen and (max-width: 960px) {
+  .mypageCard {
+    width: 100%;
+  }
+
+  .mypageCard-mobile-card {
+    width: 100%;
+
+    background-color: #ffffff;
+    text-align: left;
+    border-radius: 10px;
+
+    box-sizing: border-box;
+
+    padding: 16px 0;
+    .mypageCard-mobile-card-date {
+      font-family: "SUIT";
+      font-weight: 500;
+      font-size: 12px;
+
+      color: #b1b5be;
+
+      margin-bottom: 12px;
+      padding: 0 4.44vw;
+    }
+
+    .mypageCard-mobile-card-img {
+      width: 100%;
+      img {
+        width: 100%;
+      }
+    }
+
+    .mypageCard-mobile-card-tags {
+      display: flex;
+      word-wrap: break-word;
+
+      margin: 12px 0 10px 0;
+      padding: 0 4.44vw;
+      .mypage-tag {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        padding: 4px;
+        font-family: "SUIT";
+        font-weight: 500;
+        font-size: 11px;
+        color: #00cb8e;
+
+        background-color: #deffef;
+        border-radius: 3px;
+
+        margin-right: 4px;
+      }
+    }
+
+    .mypageCard-mobile-card-textBox {
+      font-family: "SUIT";
+      padding: 0 4.44vw;
+      .mypageCard-mobile-card-title {
+        font-weight: 600;
+        font-size: 17px;
+
+        color: #191919;
+
+        margin-bottom: 12px;
+      }
+
+      .mypageCard-mobile-card-content {
+        font-weight: 500;
+        font-size: 13px;
+
+        color: #616269;
+        word-break: break-word;
+        display: -webkit-box;
+        -webkit-line-clamp: 2;
+        -webkit-box-orient: vertical;
+      }
+    }
+  }
+
+  .mypageCard-mobile-type2 {
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(119px, 1fr));
+    gap: 1px;
+    width: 100%;
+    height: 120px;
+
+    .mypageCard-none {
+      background-color: pink;
+      .mypageCard-noneImg {
+        font-size: 0.9375rem;
+        padding: 12px;
+
+        word-break: break-word;
+        display: -webkit-box;
+        // -webkit-line-clamp: 3;
+        -webkit-box-orient: vertical;
+        overflow: hidden;
+      }
+    }
   }
 }
