--- a/src/components/ProfileCard/ProfileCard.scss
+++ b/src/components/ProfileCard/ProfileCard.scss
@@ -3,7 +3,6 @@
 
   position: absolute;
   width: 249px;
-  //   height: 197px;
   top: 56px;
   right: 18.75vw;
 
@@ -11,25 +10,25 @@
   border: 1px solid #e4e9ed;
   border-radius: 10px;
 
+  padding: 1.04167vw 1.04167vw 0 1.04167vw;
   .profileCard-top {
     display: flex;
     box-sizing: border-box;
-    padding: 1.04167vw;
 
+    margin-bottom: 20px;
     .profileCard-text {
       display: flex;
       flex-direction: column;
       font-family: "SUIT";
       font-weight: 600;
-      //   font-size: 19px;
-      font-size: 0.9896vw;
+      font-size: 19px;
       text-align: left;
       color: #191919;
       button {
         padding-left: 0;
         font-weight: 500;
-        // font-size: 12px;
-        font-size: 0.625vw;
+        font-size: 12px;
+
         color: #b1b5be;
         border: 0;
       }
@@ -37,8 +36,8 @@
     .profileCard-profile {
       margin-right: 0.625vw;
       img {
-        width: 2.0833vw;
-        height: 2.0833vw;
+        width: 40px;
+        height: 40px;
         border-radius: 50%;
       }
     }
@@ -46,25 +45,46 @@
 
   .profileCard-bottom {
     border-top: 1px solid #e4e9ed;
+
+    padding-top: 20px;
     ul {
       list-style: none;
       box-sizing: border-box;
-      padding: 1.04167vw;
-      text-align: left;
-
+      padding: 0;
+      margin: 0;
       font-family: "SUIT";
       font-weight: 500;
       font-size: 13px;
       color: #616269;
+      text-align: left;
+
       li {
-        margin-bottom: 1.04167vw;
+        padding-bottom: 20px;
         cursor: pointer;
       }
       li:hover {
         color: #00cb8e;
       }
-      li:nth-child(3) {
-        margin: 0;
+    }
+  }
+}
+
+@media screen and (max-width: 960px) {
+  .profileCard {
+    width: 191px;
+    right: 4.44vw;
+
+    padding: 24px 16px 0 16px;
+    .profileCard-top {
+      .profileCard-text {
+        font-size: 15px;
+      }
+      .profileCard-profile {
+        img {
+          width: 32px;
+          height: 32px;
+          margin-right: 8px;
+        }
       }
     }
   }
