--- a/src/components/SignInBox/SignInBox.scss
+++ b/src/components/SignInBox/SignInBox.scss
@@ -42,3 +42,15 @@
     }
   }
 }
+
+@media screen and (max-width: 960px) {
+  .signInBox {
+    width: 100vw;
+    max-width: 480px;
+    padding: 52px 4.72vw 0 4.72vw;
+    .signInBox-container {
+      width: 100%;
+      padding: 0;
+    }
+  }
+}
