--- a/src/components/ToggleBtn/ToggleBtn.scss
+++ b/src/components/ToggleBtn/ToggleBtn.scss
@@ -4,10 +4,13 @@
   // width: 5.52vw;
   border-radius: 30px;
 
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
   font-family: "SUIT";
   font-weight: 600;
   font-size: 1rem;
-  line-height: 20px;
   cursor: pointer;
   margin-right: 10px;
 }
@@ -20,4 +23,11 @@
 .toggle-nonactive {
   color: #616269;
   background: #eef1f4;
+}
+
+@media screen and (max-width: 960px) {
+  .toggle {
+    font-size: 0.875rem;
+    padding: 8px 16px;
+  }
 }
