--- a/src/pages/Main/Main.scss
+++ b/src/pages/Main/Main.scss
@@ -1,4 +1,5 @@
 .Main {
+  width: 100vw;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -7,8 +8,9 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    text-align: center;
-    width: 81.25vw;
+    width: 100%;
+    box-sizing: border-box;
+    padding: 0 18.75vw;
 
     .main-title {
       font-family: "SUIT";
@@ -54,5 +56,27 @@
   }
 }
 
-@media (max-width: 674px) {
+@media screen and (max-width: 960px) {
+  .Main {
+    width: 100vw;
+    .main-content {
+      padding: 0 4.44vw;
+      .main-title {
+        font-size: 1.25rem;
+        white-space: nowrap;
+
+        margin: 40px 0;
+      }
+
+      .main-grid {
+        margin-bottom: 40px;
+        grid-template-columns: repeat(auto-fill, minmax(202px, 1fr));
+        row-gap: 22px;
+      }
+    }
+
+    .main-line {
+      margin: 0 0 30px 0;
+    }
+  }
 }
