--- a/src/pages/SignIn/SignIn.scss
+++ b/src/pages/SignIn/SignIn.scss
@@ -26,3 +26,12 @@
     margin-bottom: 209px;
   }
 }
+
+@media screen and (max-width: 960px) {
+  .signIn {
+    .signIn-title {
+      font-size: 1.25rem;
+      margin: 32px 0 30px 0;
+    }
+  }
+}
