--- a/src/pages/StoryList/StoryList.scss
+++ b/src/pages/StoryList/StoryList.scss
@@ -38,3 +38,23 @@
     }
   }
 }
+
+@media screen and (max-width: 960px) {
+  .storylist {
+    .storylist-content {
+      margin-top: 11px;
+
+      .storylist-line {
+        margin: 0 0 30px 0;
+        border: 1px solid #eef1f4;
+        width: 100%;
+      }
+      .storylist-grid {
+        margin-bottom: 60px;
+        display: grid;
+        grid-template-columns: repeat(auto-fill, minmax(202px, 1fr));
+        row-gap: 16px;
+      }
+    }
+  }
+}
