--- a/src/components/IntroductionPages/Scene1/Scene1.scss
+++ b/src/components/IntroductionPages/Scene1/Scene1.scss
@@ -36,6 +36,7 @@
 
   position: relative;
   display: flex;
+
   overflow: hidden;
   transition: all 0.5s;
 
@@ -103,30 +104,31 @@
       }
     }
   }
-  .scene1-scrollani {
+  .scene1-scroll-box {
+    width: 100%;
     position: absolute;
-    display: inline-block;
-    // left: 905px;
-    // left: 47.1354vw;
-    left: 47.1354vw;
     bottom: 45px;
-    font-family: "SUIT";
-    font-weight: 500;
-    font-size: 20px;
 
-    color: #ffffff;
-  }
-  .scene1-scrollimg {
-    width: 12px;
-    height: 10px;
-    background-image: url("../../../assets/imgs/scrolldown.jpg");
-    background-repeat: no-repeat;
-    background-size: cover;
-    position: absolute;
-    // left: 948px;
-    left: 50%;
-    bottom: 35px;
-    animation: scrolldownText 1s infinite;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    .scene1-scrollani {
+      display: inline-block;
+
+      font-family: "SUIT";
+      font-weight: 500;
+      font-size: 20px;
+
+      color: #ffffff;
+    }
+    .scene1-scrollimg {
+      width: 12px;
+      height: 10px;
+      background-image: url("../../../assets/imgs/scrolldown.png");
+      background-repeat: no-repeat;
+      background-size: cover;
+      animation: scrolldownText 1s infinite;
+    }
   }
 }
 
@@ -140,4 +142,66 @@
   height: 100vh;
 
   background-color: #191919;
+}
+
+@media screen and (max-width: 960px) {
+  .scene1 {
+    .scene1-textbox {
+      width: 100%;
+      padding: 0;
+
+      box-sizing: border-box;
+
+      top: 50%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+
+      .scene1-title {
+        font-weight: bold;
+        font-size: 32px;
+        animation: textAni 0.8s forwards;
+        opacity: 0;
+      }
+
+      .scene1-subtitle {
+        font-weight: 400;
+        font-size: 18px;
+        margin-bottom: 28px;
+        animation: textAni 0.8s forwards;
+        animation-delay: 0.5s;
+        opacity: 0;
+      }
+
+      .scene1-progressbar-box {
+        display: flex;
+        align-items: center;
+        button {
+          border: 0;
+          background-color: transparent;
+          display: flex;
+          align-items: center;
+          img {
+            width: 7px;
+          }
+        }
+        .scene1-progressbars {
+          list-style: none;
+          display: flex;
+          margin: 0;
+          padding: 0;
+
+          .scene1-progressbar {
+            width: 46px;
+            height: 2px;
+            background-color: white;
+            margin-right: 2px;
+          }
+          .scene1-current {
+            background-color: #00cb8e;
+          }
+        }
+      }
+    }
+  }
 }
