--- a/src/components/IntroductionPages/Scene2/Scene2.scss
+++ b/src/components/IntroductionPages/Scene2/Scene2.scss
@@ -4,11 +4,12 @@
   position: relative;
   box-sizing: border-box;
   padding-top: 56px;
+
+  display: flex;
   .scene2-backgroundimg {
     width: 66.5625vw;
     height: 34.8958vw;
-    // height: 670px;
-    // height: 67.6085vh;
+
     background: url("../../../assets/imgs/Scene2/Scene2.jpg") no-repeat;
     background-size: cover;
     position: absolute;
@@ -17,31 +18,64 @@
   }
 
   .scene2-left {
+    flex: 2;
     font-family: "SUIT";
+    box-sizing: border-box;
+
     font-weight: 800;
     font-size: 2.084vw;
     color: #191919;
 
     text-align: left;
-    // padding: 84px 18.75vw;
-    padding: 8.468vh 18.75vw;
 
-    span {
-      box-shadow: inset 0 -20px 0 #19e6a8;
+    .scene2-left-text {
+      width: 100%;
+      padding: 8.468vh 18.75vw;
+      span {
+        box-shadow: inset 0 -20px 0 #19e6a8;
+      }
     }
   }
   .scene2-right {
+    flex: 6;
     box-sizing: border-box;
-    position: absolute;
-    top: 0;
-    right: 0;
-    // width: 1152px;
-    width: 60vw;
-    height: 100%;
     background-color: #00cb8e;
 
-    // padding: 136px 0 0 91px;
-    padding: 136px 0 0 91px;
+    padding: 80px 0 0 91px;
     text-align: left;
+  }
+}
+
+@media screen and (max-width: 960px) {
+  .scene2 {
+    flex-direction: column;
+    padding-top: 40px;
+
+    .scene2-backgroundimg {
+      width: 100vw;
+      height: 30vh;
+
+      top: 100px;
+    }
+    .scene2-left {
+      box-sizing: border-box;
+
+      font-size: 1.25rem;
+      text-align: left;
+
+      .scene2-left-text {
+        box-sizing: border-box;
+        width: 100%;
+        padding: 60px 4.44vw 0 4.44vw;
+        span {
+          box-shadow: inset 0 -20px 0 #19e6a8;
+        }
+      }
+    }
+    .scene2-right {
+      box-sizing: border-box;
+
+      padding: 30px 4.44vw;
+    }
   }
 }
