--- a/src/components/IntroductionPages/Scene3/Scene3.scss
+++ b/src/components/IntroductionPages/Scene3/Scene3.scss
@@ -6,8 +6,8 @@
   background-position: center;
 
   position: relative;
-  // padding: 136px 18.75vw 0 18.75vw;
-  padding: 7.083vw 18.75vw 0 18.75vw;
+  padding: 13.71vh 18.75vw 0 18.75vw;
+  // padding: 7.083vw 18.75vw 0 18.75vw;
   text-align: left;
   box-sizing: border-box;
 
@@ -21,8 +21,9 @@
     color: #ffffff;
 
     .scene3-title {
+      white-space: pre;
       box-shadow: inset 0 -4px 0 #19e6a8;
-      margin-right: 126px;
+      margin-right: 6.5625vw;
     }
     .scene3-content {
       font-weight: 500;
@@ -33,7 +34,7 @@
 
   .scene3-cardlist {
     // margin-top: 80px;
-    margin-top: 4.1666666667vw;
+    margin-top: 4.17vw;
     display: flex;
     justify-content: space-between;
   }
@@ -49,4 +50,32 @@
   height: 100vh;
 
   background-color: #191919;
+}
+
+@media screen and (max-width: 960px) {
+  .scene3 {
+    padding: 100px 4.44vw 0 4.44vw;
+
+    height: auto;
+    .scene3-textbox {
+      flex-direction: column;
+      align-items: center;
+      text-align: center;
+
+      .scene3-title {
+        margin: 0;
+        font-size: 1.5rem;
+        margin-bottom: 20px;
+      }
+      .scene3-content {
+        font-size: 0.8125rem;
+        line-height: 19px;
+      }
+    }
+
+    .scene3-cardlist {
+      flex-direction: column;
+      align-items: center;
+    }
+  }
 }
