--- a/src/components/IntroductionPages/Scene5/Scene5.scss
+++ b/src/components/IntroductionPages/Scene5/Scene5.scss
@@ -80,14 +80,13 @@
     display: flex;
 
     .scene5-content-img {
-      // width: 384px;
-      width: 20vw;
-      // height: 271px;
-      height: 27.3185vh;
+      width: 20vw; //384
+      height: 27.3185vh; //271
       position: relative;
 
       img {
-        width: 100%;
+        // width: 100%;
+        width: 384px;
         height: 100%;
         border-radius: 10px;
       }
@@ -161,5 +160,188 @@
         opacity: 0;
       }
     }
+  }
+}
+
+@media screen and (max-width: 960px) {
+  .scene5 {
+    background-color: #f8f9fb;
+    .scene5-top {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+
+      .scene5-title {
+        font-size: 24px;
+        line-height: 32px;
+        color: #191919;
+        text-align: center;
+
+        padding: 0;
+        padding: 100px 4.44vw 0 4.44vw;
+      }
+      .scene5-title::before {
+        content: "";
+        width: 67px;
+        height: 2px;
+        bottom: 0;
+        left: 30%;
+
+        background: #19e6a8;
+      }
+
+      .scene5-accordion {
+        z-index: 10;
+        box-sizing: border-box;
+
+        max-width: 328px;
+        width: 100%;
+        height: auto;
+
+        // padding: 12px 4.44vw;
+        padding: 12px 16px;
+
+        background: #ffffff;
+
+        border: 1px solid #e4e9ed;
+        border-radius: 10px;
+
+        display: flex;
+        flex-direction: column;
+
+        .scene5-accordion-top {
+          position: relative;
+
+          display: flex;
+          align-items: center;
+
+          img {
+            width: 40px;
+            height: 40px;
+            margin-right: 20px;
+          }
+          .scene5-accordion-top-text {
+            font-family: "SUIT";
+            text-align: left;
+            .scene5-accordion-top-name {
+              font-weight: 600;
+              font-size: 17px;
+              line-height: 17px;
+              color: #191919;
+
+              margin-bottom: 4px;
+            }
+
+            .scene5-accordion-top-position {
+              font-weight: 500;
+              font-size: 14px;
+              line-height: 12px;
+              color: #616269;
+            }
+          }
+
+          .scene5-accordion-active-btn {
+            position: absolute;
+            border: 0;
+            background-color: transparent;
+            width: 15px;
+            height: 9px;
+
+            display: flex;
+            justify-content: center;
+            align-items: center;
+
+            right: 0;
+            img {
+              width: 15px;
+              height: 9px;
+            }
+          }
+        }
+        .scene5-accordion-bottom {
+          text-align: left;
+          font-weight: 500;
+          font-size: 14px;
+          line-height: 21px;
+          color: #616269;
+
+          overflow: hidden;
+
+          ul {
+            margin: 0;
+            padding: 0;
+            li::marker {
+              content: "·";
+            }
+          }
+          .scene5-accordion-bottom-line {
+            width: 296px;
+            height: 1px;
+            margin: 12px 0 28px 0;
+            background: #e4e9ed;
+          }
+          .scene5-accordion-title {
+            // padding: 0 3.1vw;
+            padding: 0 11px;
+            font-weight: bold;
+            font-size: 16px;
+            line-height: 24px;
+            color: #191919;
+
+            margin-bottom: 30px;
+          }
+        }
+        .scene5-accordion-bottom-open {
+          animation: openAccordionBottom 0.5s forwards;
+        }
+        .scene5-accordion-bottom-close {
+          animation: closeAccordionBottom 0.5s forwards;
+        }
+      }
+      .scene5-accordion-open {
+        animation: openAccordion 0.5s forwards;
+      }
+      .scene5-accordion-close {
+        animation: closeAccordion 0.5s forwards;
+      }
+    }
+
+    .scene5-contents {
+    }
+  }
+}
+
+@keyframes openAccordionBottom {
+  0% {
+    height: 0;
+  }
+  100% {
+    height: 100%;
+  }
+}
+
+@keyframes closeAccordionBottom {
+  0% {
+    height: 100%;
+  }
+  100% {
+    height: 0;
+  }
+}
+
+@keyframes openAccordion {
+  0% {
+    height: 64px;
+  }
+  100% {
+    height: auto;
+  }
+}
+@keyframes closeAccordion {
+  0% {
+    height: 64px;
+  }
+  100% {
+    height: 64px;
   }
 }
