--- a/src/components/IntroductionPages/Scene6/Scene6.scss
+++ b/src/components/IntroductionPages/Scene6/Scene6.scss
@@ -34,32 +34,67 @@
 
   .scene6-btn {
     width: 16.3021vw;
-    // height: 60px;
-    height: 6.046vh;
+    height: 6.046vh; //60
+
+    box-sizing: border-box;
+
+    padding: 2.016vh 2.0833vw;
 
     display: flex;
-
     align-items: center;
-    background: #191919;
+
     border-radius: 50px;
 
     font-family: "SUIT";
     font-weight: bold;
-    // font-size: 24px;
     font-size: 1.25vw;
     text-align: left;
-    box-sizing: border-box;
-    // padding: 20px 40px;
-    padding: 2.016vh 2.0833vw;
-
     color: #ffffff;
 
+    background: #191919;
     background-image: url("../../../assets/imgs/Scene6/btnArrow.jpg");
     background-repeat: no-repeat;
-    // background-position: 85% center;
-    // background-position: 2.016vh 2.0833vw;
+
     background-position: 12.802vw 2.016vh;
-    // background-size: 21.6px;
     background-size: 1.125vw;
+  }
+}
+
+@media screen and (max-width: 960px) {
+  .scene6 {
+    padding: 100px 4.44vw 0 4.44vw;
+    // background-color: #ffffff;
+    .scene6-title {
+      font-weight: bold;
+      font-size: 1.25rem;
+      line-height: 28px;
+      margin-bottom: 6.1vh;
+
+      span {
+        box-shadow: inset 0px -10px 0px#19e6a8;
+      }
+    }
+    .scene6-image {
+      width: 255px;
+      height: 255px;
+      img {
+        width: 100%;
+        height: 100%;
+      }
+      margin-bottom: 0;
+    }
+
+    .scene6-btn {
+      width: 100%;
+      max-width: 253px;
+      height: 52px;
+
+      border-radius: 50px;
+
+      font-size: 1.25rem;
+      background-position: 85% 45%;
+      background-size: 20px;
+      padding: 0 0 0 32px;
+    }
   }
 }
