--- a/src/pages/WriteArticle/Save.scss
+++ b/src/pages/WriteArticle/Save.scss
@@ -20,7 +20,8 @@
   justify-content: flex-end;
 
   .save-box {
-    width: 25vw;
+    // width: 25vw;
+    width: 480px;
     height: 110vh;
     background: #ffffff;
 
