--- a/src/components/MypageCard/MypageCard.scss
+++ b/src/components/MypageCard/MypageCard.scss
@@ -1,7 +1,7 @@
 .mypageCard {
   box-sizing: border-box;
   // width: 14.6875vw;
-  // width: 282px;
+  width: 282px;
   height: 282px;
   overflow: hidden;
   position: relative;
@@ -116,8 +116,10 @@
 
     .mypageCard-mobile-card-img {
       width: 100%;
+      height: 188px;
       img {
         width: 100%;
+        height: 188px;
       }
     }
 
@@ -179,8 +181,11 @@
     width: 100%;
     height: 120px;
 
+    img {
+      width: 100%;
+      height: 100%;
+    }
     .mypageCard-none {
-      background-color: pink;
       .mypageCard-noneImg {
         font-size: 0.9375rem;
         padding: 12px;
