--- a/src/components/ProfileDetailsEdit/ProfileDetailsEdit.scss
+++ b/src/components/ProfileDetailsEdit/ProfileDetailsEdit.scss
@@ -65,9 +65,11 @@
 
       .profileDetailsEdit-hashtag-list {
         width: 100%;
-        display: grid;
-        grid-template-columns: repeat(auto-fill, minmax(70px, 1fr));
+        display: flex;
+        flex-flow: row wrap;
+
         row-gap: 4px;
+        column-gap: 4px;
       }
     }
   }
