Fix : url 이동시 프로필카드 비활성화

--- a/src/components/ProfileEdit/ProfileEdit.scss
+++ b/src/components/ProfileEdit/ProfileEdit.scss
@@ -32,7 +32,6 @@
         color: #ff4c4c;
         border: 0;
         background-color: #ffffff;
-        width: 65px;
         text-align: left;
       }
       .profileEdit-info-imgchange {
@@ -62,6 +61,8 @@
         padding: 10px 0;
 
         color: #00cb8e;
+
+        cursor: pointer;
       }
       input::file-selector-button {
         display: none;
