--- a/src/pages/SignUp/SignUp.scss
+++ b/src/pages/SignUp/SignUp.scss
@@ -4,6 +4,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
   background: #f8f9fb;
 
   .signUp-sns {
@@ -22,5 +23,6 @@
 
 @media screen and (max-width: 960px) {
   .signUp {
+    min-height: calc(100vh - 197px);
   }
 }
